# Logger2

./: LICENCE  README.md
src/: .Logger2.cpp.swp  .Logger2.h.swp  .main.cpp.swp  CMakeLists.txt  Communicator.cpp  Communicator.h  Logger2.cpp  Logger2.h  MemoryBuffer.h  TcpHandler.h  main.cpp  main.h
src/OpenNI2/: .OpenNI2Interface.h.swp  CameraInterface.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RealSenseInterface.cpp  RealSenseInterface.h
